--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@ var path = d3.geoPath();
 //     .range(d3.schemeBlues[0,9]);
 
 var color = d3.scaleThreshold()
-    .domain([0, 1, 5, 10, 50, 100, 800])
-    .range(["#f2f0f7", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"]);
+    .domain([1, 5, 10, 50, 100, 200])
+    //.range(["#f2f0f7", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"]);
+    .range(["#ffffff", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"])
 
 
 // d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
