Add countyState data via extra map.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 var svg = d3.select("svg");
 
-var map = d3.map();
+var map1 = d3.map();
+var map2 = d3.map();
 
 var path = d3.geoPath();
 
@@ -49,7 +50,7 @@ var path = d3.geoPath();
 var color = d3.scaleThreshold()
     .domain([1, 5, 10, 50, 100, 200])
     //.range(["#f2f0f7", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"]);
-    .range(["#ffffff", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"])
+    .range(["#fafafa", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"])
 
 
 // d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
@@ -76,7 +77,9 @@ var color = d3.scaleThreshold()
 
 d3.queue()
     .defer(d3.json, "https://d3js.org/us-10m.v1.json")
-    .defer(d3.csv, "data/CountyTotals.csv", function(d) { map.set(d.id, +d.count); })
+    .defer(d3.csv, "data/CountyTotals.csv", function(d) { 
+      map1.set(d.id, +d.count);
+      map2.set(d.id, d.countyState); })
     .await(ready);
 
 function ready(error, us) {
@@ -87,10 +90,10 @@ function ready(error, us) {
     .selectAll("path")
     .data(topojson.feature(us, us.objects.counties).features)
     .enter().append("path")
-    .attr("fill", function(d) { return color(d.count = map.get(d.id)); })
+    .attr("fill", function(d) { return color(d.count = map1.get(d.id)); })
     .attr("d", path)
     .append("title")
-    .text(function(d) { return d.count; });
+    .text(function(d) { return map2.get(d.id) + ": " + d.count + " players"; });
 
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a.id !== b.id; }))
