--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
 <!DOCTYPE html>
 <head>
   <title>Choropleth Map</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<style>
-.counties {
-  fill: none;
-}
 
-.counties :hover {
-  fill: red;
-  transition-duration: .15s;
-  transition-timing-function: ease-in-out;
-}
-
-.county-borders {
-  stroke: #black;
-  stroke-width: 0.25px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
-}
-
-.states {
-  fill: none;
-  stroke: #000;
-  stroke-linejoin: round;
-}
-
-</style>
 <svg width="1920" height="1080"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
